Fix about link when deployed.

--- a/GptMeetingAgent/Pages/Shared/Header.cshtml
+++ b/GptMeetingAgent/Pages/Shared/Header.cshtml
@@ -33,7 +33,7 @@
                         }
 
                         // Uses prerendered /blog for production
-                        RenderNavLink(Html.IsDebug() ? "/posts/chat-gpt-agents" : "/blog/", "About", "ml-8 sm:ml-0");
+                        RenderNavLink(Html.IsDebug() ? "/posts/chat-gpt-agents" : "/blog/chat-gpt-agents", "About", "ml-8 sm:ml-0");
                     }
                 </ul>
             </nav>
